# json-rpc-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.agents/docs/: builder-pattern.md  json-rpc-spec.md  json-rpc-thread-pool.md  thread-pool-notes.md  tokio-json-rpc.md
.agents/guidelines/: readme.md  rust.md
.agents/instructions/: changelog.md  create-git-commit-message.md  create-plan.md  research.md
.agents/plans/: 001-replace-trait-with-builder-pattern.md  002-error-handling-tests.md  003-thread-pool-server-tests.md  004-cancellable-requests.md
.agents/research/: cargo-dev-dependency-features.md  tokio-json-rpc.md
examples/: basic_axum.rs  basic_http_server.rs  basic_server.rs  basic_stdio.rs  basic_stdio_server.rs  echo_axum.rs  echo_http_server.rs  echo_server.rs  echo_stdio.rs  echo_stdio_server.rs  graceful_shutdown_http.rs
src/: axum.rs  cancellation.rs  error.rs  handler.rs  jsonrpc.rs  lib.rs  methods.rs  router.rs  server.rs  shutdown.rs  types.rs
src/transports/: http.rs  in_memory.rs  mod.rs  stdio.rs  transport.rs
tests/: basic_axum.rs  basic_http_server.rs  basic_server.rs  basic_stdio.rs  basic_stdio_server.rs  common.rs  echo_axum.rs  echo_http_server.rs  echo_server.rs  echo_stdio.rs  echo_stdio_server.rs
