[package]
name = "json-rpc-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "json_rpc"

[dependencies]
# Error definition
thiserror = "2.0"

# JSON stuff
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Thread pool
num_cpus = "1"

[dev-dependencies]
# Error handling for examples
anyhow = "1.0"
