[package]
name = "json-rpc-rs"
version = "0.1.0"
edition = "2024"
description = "A thread pool-based Rust implementation of JSON-RPC 2.0"
keywords = ["json-rpc", "rpc", "server", "json"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/pyk/json-rpc-rs"
documentation = "https://docs.rs/json-rpc-rs"
homepage = "https://github.com/pyk/json-rpc-rs"

[lib]
name = "json_rpc"

[dependencies]
# Error definition
thiserror = "2.0"

# JSON stuff
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Thread pool
num_cpus = "1"

# Tracing
tracing = "0.1"

# Async runtime
tokio = {version = "1", features = ["rt", "io-std", "io-util", "sync"]}

# HTTP Transports
axum = "0.8"
http = "1.4"

[dev-dependencies]
# Error handling for examples
anyhow = "1.0"

# Integration tests
assert_cmd = "2.1.2"

# Enable trace in integration tests
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}

# Async runtime for examples and tests
tokio = {version = "1", features = ["full"]}
