[package]
name = "json-rpc-rs"
version = "0.3.0"
edition = "2024"
description = "A framework-agnostic JSON-RPC 2.0 handler for Rust"
keywords = ["json-rpc", "rpc", "handler", "json", "async"]
categories = ["network-programming", "asynchronous"]
license = "MIT"
repository = "https://github.com/pyk/json-rpc-rs"
documentation = "https://docs.rs/json-rpc-rs"
homepage = "https://github.com/pyk/json-rpc-rs"

[lib]
name = "json_rpc"

[dependencies]
# Error definition
thiserror = "2.0"

# JSON stuff
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Tracing
tracing = "0.1"

# Async runtime
tokio = {version = "1", features = ["rt", "io-std", "io-util", "sync"]}

# Futures
futures = "0.3"

# HTTP Transports (optional)
axum = {version = "0.8", optional = true}
http = {version = "1.4", optional = true}

[features]
default = []
axum = ["dep:axum", "dep:http"]

[dev-dependencies]
# Error handling for examples
anyhow = "1.0"

# Integration tests
assert_cmd = "2.1.2"

# Enable trace in integration tests
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}

# Async runtime for examples and tests
tokio = {version = "1", features = ["full"]}

# HTTP client for testing
reqwest = {version = "0.13", features = ["json"]}
axum = {version = "0.8"}

# Examples requiring axum feature
[[example]]
name = "echo_axum"
required-features = ["axum"]

[[example]]
name = "basic_axum"
required-features = ["axum"]

[[example]]
name = "graceful_shutdown_http"
required-features = ["axum"]
